Update index.html with meta tags, add favicon and logo, create site manifest, and remove unused Vite SVG

--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="az">
   <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+
+    <!-- Title & Description -->
+    <title>HİRİ – Tezliklə Gəlirik! | Yeni nəsil vakansiya platforması</title>
+    <meta
+      name="description"
+      content="HİRİ ilə əmək bazarını daha şəffaf, sürətli və innovativ kəşf edin – çox yaxında!"
+    />
+    <meta
+      name="keywords"
+      content="vakansiya, iş platforması, HİRİ, iş axtarışı, karyera"
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hiri.az/" />
+
+    <!-- Favicons & Manifest -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#0378d8" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="az_AZ" />
+    <meta property="og:url" content="https://hiri.az/" />
+    <meta
+      property="og:title"
+      content="HİRİ – Tezliklə Gəlirik! | Yeni nəsil vakansiya platforması"
+    />
+    <meta
+      property="og:description"
+      content="HİRİ ilə əmək bazarını daha şəffaf, sürətli və innovativ kəşf edin – çox yaxında!"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Hiri" />
+    <meta
+      name="twitter:title"
+      content="HİRİ – Tezliklə Gəlirik! | Yeni nəsil vakansiya platforması"
+    />
+    <meta
+      name="twitter:description"
+      content="HİRİ ilə əmək bazarını daha şəffaf, sürətli və innovativ kəşf edin – çox yaxında!"
+    />
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Structured Data (JSON‑LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://hiri.az/",
+        "name": "HİRİ",
+        "description": "HİRİ ilə əmək bazarını daha şəffaf, sürətli və innovativ kəşf edin – çox yaxında!",
+        "inLanguage": "az",
+        "publisher": {
+          "@type": "Organization",
+          "name": "HİRİ",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://hiri.az/logo.png"
+          }
+        }
+      }
+    </script>
   </head>
+
   <body>
+    <noscript>
+      Bu tətbiq düzgün işləməsi üçün JavaScript tələb edir. Zəhmət olmasa,
+      brauzerinizdə JavaScript-i aktiv edin.
+    </noscript>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
